fix overflow cardbox style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,14 +175,6 @@
     height: 80%;
 }
 
-/* .container-carousel img {
-    transition: transform .3s ease-in-out;
-} */
-
-.container-carousel:hover img {
-    transform: scale(1.5);
-}
-
 .image-carousel {
     display: none;
     width: 100%;
@@ -230,9 +222,17 @@
     box-shadow: 0 .5em 1em 0 rgba(0, 0, 0, .2);
 }
 
-.container {
-    padding: .25em 1em;
+.card-content {
+    margin: .5em 1em;
     /* background-color: #ffffff; */
+}
+
+.card-content h4 {
+    margin-bottom: 0;
+}
+
+.card-content p {
+    margin-top: 0;
 }
 
 .avatar {
@@ -243,6 +243,19 @@
     overflow: hidden;
     object-fit: cover;
 }
+
+/* .card-box, .card-box-small {
+    overflow: hidden;
+}
+
+.card-box img, .card-box-small img {
+    display: block;
+    transition: transform .3s ease-in-out;
+}
+
+.card-box:hover img, .card-box-small:hover img {
+    transform: scale(1.5);
+} */
 
 /* .main-section-card-grid {
     
